Финальный проект №8: Добавление времени и приоритетных задач